[project]
name = "fusion-multi-nodes"
version = "0.1.0"
description = "Fusion-Multi-Node — Cluster scheduling core for distributed Apple Silicon MLX inference."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "aiofiles>=23.0.0",
    "asyncio-mqtt>=0.16.0",
    "psutil>=5.9.0",
    "netifaces>=0.11.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]
web = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
]

[project.scripts]
fusion-multi-node = "fusion_multi_nodes.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["fusion_multi_nodes*"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"